[gd_scene load_steps=20 format=4 uid="uid://nnucvy6jfpg1"]

[ext_resource type="Script" path="res://utils/General/levels.gd" id="1_f51yy"]
[ext_resource type="Script" path="res://utils/camera/cameraUtils.gd" id="2_umiaf"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_1yslr"]
[ext_resource type="Script" path="res://utils/General/zone.gd" id="4_xrjgn"]
[ext_resource type="TileSet" uid="uid://c0eok0rh1674m" path="res://utils/tiles/tiles.tres" id="5_qokgw"]
[ext_resource type="PackedScene" uid="uid://bd0wvt5y28nh4" path="res://objects/resetter/resetter.tscn" id="6_dgced"]
[ext_resource type="PackedScene" uid="uid://v7c0dfv5ytx6" path="res://objects/eco/eco.tscn" id="7_sml06"]
[ext_resource type="PackedScene" uid="uid://bnqlf15ta6jee" path="res://objects/button/button.tscn" id="8_x7api"]
[ext_resource type="Script" path="res://levels/level5/way.gd" id="9_pfft5"]
[ext_resource type="PackedScene" uid="uid://bs0252qb8ruos" path="res://utils/endLevel/end_level.tscn" id="11_d6ydx"]
[ext_resource type="PackedScene" uid="uid://dse7c8pa1pc5q" path="res://objects/electricity/electricity.tscn" id="12_6yv41"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="12_icrul"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="13_xxsea"]
[ext_resource type="Script" path="res://utils/camera/trigCamera.gd" id="14_nms00"]
[ext_resource type="PackedScene" uid="uid://c6i26cm4cvd2x" path="res://objects/player/player.tscn" id="15_j0b7x"]
[ext_resource type="AudioStream" uid="uid://n6hw8f2ljplr" path="res://utils/music/NaveFr√≠a.mp3" id="16_iusbx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca2eu"]
size = Vector2(165, 20)

[sub_resource type="Resource" id="Resource_wy7hf"]
script = ExtResource("13_xxsea")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="SegmentShape2D" id="SegmentShape2D_j736d"]
b = Vector2(229, 20)

[node name="level5" type="Node2D" groups=["level"]]
script = ExtResource("1_f51yy")

[node name="Camera2D" type="Camera2D" parent="." groups=["cameraGamePri"]]
position = Vector2(24, 16)
anchor_mode = 0
zoom = Vector2(0.73, 0.73)
script = ExtResource("2_umiaf")

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_1yslr")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer" groups=["blackSquare"]]
visible = false
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="zones" type="Node2D" parent="."]

[node name="r_init" type="Node2D" parent="zones" node_paths=PackedStringArray("camera") groups=["zoneCmr"]]
script = ExtResource("4_xrjgn")
camera = NodePath("../c_init")
key = "tuto_room_init"

[node name="TileMapLayer" type="TileMapLayer" parent="zones/r_init"]
scale = Vector2(0.7, 0.7)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAFAAAAAQABAAAAAAAFAAEAAQABAAEAAAAFAAIAAQABAAEAAAAFAAMAAQABAAEAAAABAAMAAQABAAEAAAACAAMAAQABAAEAAAADAAMAAQABAAEAAAAEAAMAAQABAAEAAAAAAAMAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAEAAQAAAAEAAAABAAAAAQABAAAAAAACAAAAAQABAAAAAAADAAAAAQABAAAAAAAEAAAAAQABAAAAAAABAAEAAQABAAEAAAABAAIAAQABAAEAAAACAAEAAQABAAEAAAACAAIAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAAEAAEAAQABAAEAAAAEAAIAAQABAAEAAAAGAAEAAQABAAEAAAAGAAIAAQABAAEAAAAGAAMAAQABAAEAAAAHAAEAAQABAAEAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAAAAQAAQAAAAEAAAABAAQAAQABAAEAAAACAAQAAQABAAEAAAADAAQAAQABAAEAAAAEAAQAAQABAAEAAAAFAAQAAQABAAEAAAAGAAQAAQABAAEAAAAHAAQAAQABAAEAAAAIAAQAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAIAAAAAQABAAAAAAAGAAAAAQABAAAAAAAHAAAAAQABAAAAAAABAAUAAQABAAEAAAACAAUAAQABAAEAAAADAAUAAQABAAEAAAAEAAUAAQABAAEAAAAFAAUAAQABAAEAAAAGAAUAAQABAAEAAAAHAAUAAQABAAEAAAAIAAUAAQABAAEAAAAJAAEAAQABAAEAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAJAAQAAQABAAEAAAAJAAUAAQABAAEAAAAKAAEAAQABAAEAAAAKAAIAAQABAAEAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAAAAAUAAQAAAAEAAAABAAYAAQABAAIAAAACAAYAAQABAAIAAAADAAYAAQABAAIAAAAEAAYAAQABAAIAAAAFAAYAAQABAAIAAAAGAAYAAQABAAIAAAAHAAYAAQABAAIAAAAIAAYAAQABAAIAAAAJAAYAAQABAAIAAAAKAAYAAQABAAIAAAAAAAYAAQAAAAIAAAALAAYAAQACAAIAAAALAAEAAQACAAEAAAALAAIAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAAAAQACAAAAAAAJAAAAAQABAAAAAAAKAAAAAQABAAAAAAA=")
tile_set = ExtResource("5_qokgw")

[node name="TileMapLayer2" type="TileMapLayer" parent="zones/r_init"]
scale = Vector2(0.7, 0.7)
tile_map_data = PackedByteArray("AAAAAAAAAgAEAAQAAAAAAAEAAgAFAAQAAAAAAAIAAgAFAAQAAAAAAAMAAgAFAAQAAAAAAAQAAgAEAAQAAAAAAAUAAgAFAAQAAAALAAAAAgAEAAQAAAAAAAYAAgAEAAQAAAALAAYAAgAEAAQAAAABAAYAAgAEAAMAAAACAAYAAgAEAAQAAAADAAYAAgAEAAQAAAAEAAYAAgAEAAMAAAAFAAYAAgAEAAMAAAAGAAYAAgAEAAMAAAAHAAYAAgAEAAMAAAAIAAYAAgAEAAMAAAAJAAYAAgAEAAMAAAAKAAYAAgAEAAMAAAALAAEAAgADAAQAAAALAAIAAgADAAQAAAALAAMAAgADAAQAAAALAAQAAgADAAQAAAALAAUAAgADAAQAAAABAAAAAgAEAAUAAAACAAAAAgAEAAUAAAADAAAAAgAEAAUAAAAEAAAAAgAEAAUAAAAFAAAAAgAEAAUAAAAGAAAAAgAEAAUAAAAHAAAAAgAEAAUAAAAIAAAAAgAEAAUAAAAHAAQAAgAFAAUAAAAGAAQAAgAEAAUAAAAFAAQAAgADAAUAAAADAAQAAgAFAAMAAAACAAQAAgAEAAMAAAABAAQAAgAEAAMAAAABAAUAAgAEAAQAAAACAAUAAgAEAAQAAAAFAAMAAgADAAQAAAAHAAMAAgAEAAQAAAAGAAMAAgAEAAQAAAAIAAIAAgAEAAUAAAAJAAIAAgAEAAUAAAAKAAIAAgAEAAUAAAAHAAIAAgAEAAMAAAAGAAIAAgAEAAMAAAAFAAIAAgAEAAMAAAAEAAIAAgAEAAMAAAADAAIAAgAEAAMAAAACAAIAAgAEAAMAAAAJAAAAAgAFAAUAAAA=")
tile_set = ExtResource("5_qokgw")

[node name="Resetter" parent="zones/r_init" instance=ExtResource("6_dgced")]
position = Vector2(1283, 632)

[node name="eco" parent="zones/r_init" instance=ExtResource("7_sml06")]
position = Vector2(1421, 623)
first = true

[node name="upBtn" parent="zones/r_init" instance=ExtResource("8_x7api")]
position = Vector2(1274, 758)

[node name="downBtn" parent="zones/r_init" instance=ExtResource("8_x7api")]
position = Vector2(1391, 760)

[node name="way" type="Node2D" parent="zones/r_init"]
position = Vector2(1264, 1144)
script = ExtResource("9_pfft5")

[node name="1" type="Node2D" parent="zones/r_init/way"]

[node name="Electricity" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-232, -375)

[node name="Electricity2" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-369, -375)

[node name="Electricity3" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-508, -375)

[node name="Electricity4" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-644, -374)

[node name="Electricity7" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-782, -374)

[node name="Electricity5" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-780, -660)

[node name="Electricity6" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-920, -660)

[node name="Electricity8" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-1056, -660)

[node name="Electricity9" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-918, -940)

[node name="Electricity10" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-782, -940)

[node name="Electricity11" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-644, -940)

[node name="Electricity12" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(-233, -940)

[node name="Electricity13" parent="zones/r_init/way/1" instance=ExtResource("12_6yv41")]
position = Vector2(43, -940)

[node name="2" type="Node2D" parent="zones/r_init/way"]

[node name="Electricity4" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-643, -517)

[node name="Electricity5" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-643, -661)

[node name="Electricity6" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-1055, -797)

[node name="Electricity7" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-1055, -941)

[node name="Electricity8" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-505, -941)

[node name="Electricity9" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-369, -941)

[node name="Electricity10" parent="zones/r_init/way/2" instance=ExtResource("12_6yv41")]
position = Vector2(-97, -941)

[node name="endLevel" parent="zones/r_init" instance=ExtResource("11_d6ydx")]
redirectLevel = "res://levels/creditos/creditos.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="zones/r_init/endLevel"]
position = Vector2(1433.5, -32)
shape = SubResource("RectangleShape2D_ca2eu")

[node name="c_init" type="Node2D" parent="zones" groups=["cameraGame"]]
position = Vector2(24, 16)
script = ExtResource("12_icrul")
zoom = Vector2(0.73, 0.73)
tween_resource = SubResource("Resource_wy7hf")
draw_limits = true

[node name="Area2D" type="Area2D" parent="zones/c_init"]
monitorable = false
script = ExtResource("14_nms00")

[node name="CollisionShape2D" type="CollisionShape2D" parent="zones/c_init/Area2D"]
position = Vector2(392, 25)
shape = SubResource("SegmentShape2D_j736d")

[node name="player" parent="." groups=["playerPro"] instance=ExtResource("15_j0b7x")]
position = Vector2(1420, 622)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." groups=["music_node"]]
stream = ExtResource("16_iusbx")
volume_db = -15.0
autoplay = true

[connection signal="deleaseSignal" from="zones/r_init/upBtn" to="zones/r_init/way" method="upDelease"]
[connection signal="pressSignal" from="zones/r_init/upBtn" to="zones/r_init/way" method="upPresed"]
[connection signal="deleaseSignal" from="zones/r_init/downBtn" to="zones/r_init/way" method="downDelease"]
[connection signal="pressSignal" from="zones/r_init/downBtn" to="zones/r_init/way" method="downPressed"]
